<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.shoppi.model.CartProduct" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/shoppi_white"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <CheckBox
                android:id="@+id/cb_item_cart_product"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_cart_checkbox"
                android:button="@null"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_item_cart_product"
                imageUrl="@{product.thumbnailImageUrl}"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/description_image_item_product_thumbnail"
                app:layout_constraintStart_toEndOf="@id/cb_item_cart_product"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Circle" />

            <TextView
                android:id="@+id/tv_item_cart_product_title"
                style="@style/TextCaption1.Grey01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@{product.label}"
                app:layout_constraintEnd_toStartOf="@id/btn_item_cart_product_delete"
                app:layout_constraintStart_toEndOf="@id/iv_item_cart_product"
                app:layout_constraintTop_toTopOf="@id/iv_item_cart_product"
                tools:text="캐시미어 100% 터틀넥 스웨터" />

            <ImageButton
                android:id="@+id/btn_item_cart_product_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_delete"
                android:contentDescription="@string/description_btn_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_cart_product_option"
                style="@style/TextCaption1.Grey01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@{product.type}"
                app:layout_constraintEnd_toEndOf="@id/tv_item_cart_product_title"
                app:layout_constraintStart_toStartOf="@id/tv_item_cart_product_title"
                app:layout_constraintTop_toBottomOf="@id/tv_item_cart_product_title"
                tools:text="옵션: Free" />

            <ImageButton
                android:id="@+id/iv_item_cart_product_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_minus"
                android:contentDescription="@string/description_btn_minus"
                app:layout_constraintStart_toStartOf="@id/tv_item_cart_product_option"
                app:layout_constraintTop_toBottomOf="@id/tv_item_cart_product_option" />

            <TextView
                android:id="@+id/tv_item_cart_product_count"
                style="@style/TextSubtitle2.Black02.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{String.valueOf(product.count)}"
                app:layout_constraintBottom_toBottomOf="@id/iv_item_cart_product_minus"
                app:layout_constraintEnd_toStartOf="@id/iv_item_cart_product_plus"
                app:layout_constraintStart_toEndOf="@id/iv_item_cart_product_minus"
                app:layout_constraintTop_toTopOf="@id/iv_item_cart_product_minus"
                tools:text="1" />

            <ImageButton
                android:id="@+id/iv_item_cart_product_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_plus"
                android:contentDescription="@string/description_btn_plus"
                app:layout_constraintStart_toEndOf="@id/tv_item_cart_product_count"
                app:layout_constraintTop_toTopOf="@id/iv_item_cart_product_minus" />

            <TextView
                android:id="@+id/tv_item_cart_product_price"
                style="@style/TextSubtitle1.Bold"
                priceAmount="@{product.price}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_item_cart_product_plus"
                tools:text="81,000원" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>