<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.shoppi.model.ProductDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shoppi_white"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_product_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_gnb_back" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_thumbnail_product_detail"
                    imageUrl="@{product.representativeImageUrl}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="@string/description_thumbnail_product_detail"
                    app:layout_constraintDimensionRatio="w, 1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedBig"
                    tools:src="@drawable/img_pdp_top_01" />

                <TextView
                    android:id="@+id/tv_brand_name_product_detail"
                    style="@style/TextSubtitle3.Grey03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@{product.brandName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_thumbnail_product_detail"
                    tools:text="twg. official" />

                <TextView
                    android:id="@+id/tv_label_product_detail"
                    style="@style/TextMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@{product.label}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_brand_name_product_detail"
                    tools:text="[19차 리오더] 페이크 레더 숏 데일리 자켓 블랙" />

                <TextView
                    android:id="@+id/tv_discount_rate_product_detail"
                    style="@style/TextMedium.Purple.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@{@string/unit_discount_rate(product.discountRate)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_product_detail"
                    tools:text="10%" />

                <TextView
                    android:id="@+id/tv_discount_price_product_detail"
                    style="@style/TextMedium"
                    discountRate="@{product.discountRate}"
                    priceAmount="@{product.price}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_discount_rate_product_detail"
                    app:layout_constraintStart_toEndOf="@id/tv_discount_rate_product_detail"
                    app:layout_constraintTop_toTopOf="@id/tv_discount_rate_product_detail"
                    tools:text="99,800원" />


                <TextView
                    android:id="@+id/tv_price_product_detail"
                    style="@style/TextSubtitle2.Grey05"
                    priceAmount="@{product.price}"
                    strikeThrough="@{true}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_discount_price_product_detail"
                    app:layout_constraintStart_toEndOf="@id/tv_discount_price_product_detail"
                    tools:text="110,000원" />

                <View
                    android:id="@+id/view_product_detail_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:background="#eeeff1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_price_product_detail" />


                <TextView
                    android:id="@+id/tv_image_title_product_detail"
                    style="@style/TextSubtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/product_detail_image_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_product_detail_divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_image_title_product_detail"
                    tools:listitem="@layout/item_product_detail_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/background_gradient_white">

            <TextView
                android:id="@+id/tv_coupon"
                style="@style/TextCaption2.Grey04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/str_coupon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextSubtitle1.Bold"
                discountRate="@{product.discountRate}"
                priceAmount="@{product.price}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_coupon"
                tools:text="92,000원" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/TextSubtitle1.White.Bold"
                android:layout_width="186dp"
                android:layout_height="48dp"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_gradient_button"
                android:text="@string/product_detail_btn_cart_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>